[package]
name = "jupiter-earn-cpi"
version = "0.1.0"
description = "CPI wrapper for Jupiter Earn deposit/withdraw — demo for Surfpool chapter"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jupiter_earn_cpi"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
